Fri Apr 10 22:26:48 1998  Philip Blundell  <Philip.Blundell@pobox.com>

	* ifconfig.c (ife_print): Bracket Appletalk stuff in #if
	HAVE_AFIPX.  Add Econet support.
	(ife_print): Print `collisions' left aligned with everything
	else to make it neater.
	(main): Make interface address setting work for Econet.

	* interface.h: Add Econet support.

	* lib/pathnames.h (_PATH_PROCNET_ROSE_ROUTE): Added.

	* netstat.c: Fix `-i' to work with unified interface code.  Tidy
 	up.

	* ifconfig.c (if_print): Fix printing of aliased interfaces when
	lots are present (patch from Todd R. Eigenschink).
	(main): Bracket media stuff with #ifdef IFF_PORTSEL.

	* lib/econet.c: New file.
	* config.in, lib/Makefile: support Econet.
	* sockets.c: Likewise.

Mon Mar  2 20:45:29 1998  Philip Blundell  <Philip.Blundell@pobox.com>

	* interface.c: New file, contains code shared between ifconfig and
	netstat.
	* sockets.c: Likewise.
	
	* ifconfig.c (ife_print): Add support for latest /proc/net/dev
 	format.
	
	* ifconfig.c (ipx_getaddr): Reformat.

	* lib/inet6_gr.c: Don't #include <netinet/ip6.h>

Fri Feb 27 20:43:34 1998  Philip Blundell  <philb@gnu.org>

	* ifconfig.c (if_print): When displaying all interfaces, get list
 	from /proc/net/dev rather than using obsolete SIOCGIFCONF.
	(main): Protect portsel code with #ifdef.

	* lib/ash.c: Tidy up.
	(pr_ash): Print the address in canonical Ash notation, and accept
 	FF termination.

Fri Feb 13 18:47:09 1998  Philip Blundell  <philb@gnu.org>

	* ifconfig.c (ife_print): Only print the broadcast addreess if the
 	interface is broadcast capable.
	(ife_print): Don't print null hardware address for Ash either.
	(Version): Remove spurious "$Id" and insert correct date.

Tue Feb 10 11:45:38 1998  Philip Blundell  <pb@nexus.co.uk>

	* arp.c (arp_set): Add ATF_COM to flags.

	* ifconfig.c (ife_print): Print collisions on a separate line to
	avoid wrapping with busy interfaces.

Mon Feb  9 10:30:35 1998  Philip Blundell  <pb@nexus.co.uk>
